# rlab

./: .gitignore  AGENTS.md  BASELINE_2.md  BASELINE_3.md  EXPERIMENT_MEMORY.md  GOAL.md  INSTANCES.md  METRICS.md  README.md  SPECS.md  THIRD_PARTY_NOTICES.md  design-qa.md  install.sh  pyproject.toml  refresh-runtimes.sh  train_level1_1_ppo.py  upgrade.sh  uv-tool.toml
.codex/agents/: training-run-investigator.toml
.codex/skills/autoresearch/: SKILL.md
.codex/skills/flush-eval/: SKILL.md
.codex/skills/harden-fleet-lifecycle/: SKILL.md
.codex/skills/launch-experiment/: SKILL.md
.codex/skills/launch-training-recipe/: SKILL.md
.codex/skills/skypilot-mario-monitor/: SKILL.md
.codex/skills/upload-checkpoint/: SKILL.md
.codex/skills/upload-youtube-video/: SKILL.md
.github/workflows/: rlab-modal-eval.yml  rlab-reports-validate.yml  rlab-train-dependencies.yml  rlab-train-image.yml
artifacts/eval/distill-seq-baseline/: bc_sequence_20.json  bc_v2_sequence_1_fixed.json  bc_v2_sequence_1_fixed2.json  bc_v2_sequence_20.json  finetune_v1_sequence_20.json  finetune_v2_tiny_sequence_20.json  l11_teacher_l11_continuous.json  l12_teacher_envslug_l12_continuous.json  l12_teacher_uppercase_l12_continuous.json  l12init_v1_sequence_20.json  l12init_v2_freeze_sequence_20.json  l12init_v3_sharp_sequence_20.json  smoke_sequence.json  stochastic_default_smoke.json  stochastic_manual_check.json  teacher_l11_sequence_5.json  teacher_l12_sequence_5.json
artifacts/hf-models/tsilva-SuperMarioBros-NES_Level1-1-main/: model_metadata.json
artifacts/hf-models/tsilva-SuperMarioBros-NES_Level1-2-main/: model_metadata.json
artifacts/hf-models/tsilva-SuperMarioBros-Nes-v0_Level1-2-main/: model.metadata.json
containers/train/: Dockerfile  README.md  dependency_key.py  dockerfile_inputs.py  entrypoint.sh  environment_contract.py  gpu_key.py  lock_projection.py  rlab  runtime_key.py  smoke.py
docs/: workspace-gc.md
examples/learning/: README.md  train_level1_1_ppo.py
experiments/: README.md  eval_capacity.yaml  fleet.json  instances.json  instances.yaml  machines.yaml  modal_eval.yaml
experiments/benchmarks/: README.md  baselines.yaml
experiments/benchmarks/profiles/: artifact-storage-smoke-mario-l11.yaml  container-smoke-train-image.yaml  eval-contract-mario-l11.yaml  fleet-capacity-rtx4090.yaml  local-smoke-mario-l11.yaml  mario-env-throughput-l11.yaml  ppo-loop-throughput-mario-l11-fused-vec.yaml  ppo-loop-throughput-mario-l11-legacy-vec.yaml  ppo-loop-throughput-mario-l11.yaml  retro-env-throughput-mario-l11.yaml  (+2 more)
experiments/goals/: _mario.yaml  mario-level1-current.json
experiments/launches/: README.md  rlab_rtx4090.example.json
experiments/policies/: capacity_policy.json  capacity_policy.yaml
experiments/recipes/: README.md  supermariobros_nes_level1_winning_recipe.md
experiments/runner_profiles/: README.md  mario_ppo_post20_task_conditioned_rtx4090.example.json
experiments/specs/: README.md
ops/dstack/: README.md  b3-smoke.task.dstack.yml  b3.fleet.dstack.yml  dstack-shim-override.conf  rlab-dstack-image-cleanup  rlab-dstack-image-cleanup.service  rlab-dstack-image-cleanup.timer  rlab-dstack-server.service  rlab-rom-cache-mount  rlab-rom-cache-readonly.service
scripts/: audit_huggingface_policy_repairs.py  audit_huggingface_release.py  benchmark_env_sps.py  create_level1_2_wandb_report.py  create_wandb_checkpoint_leaderboard_report.py  eval_wandb_checkpoints.py  evaluate_huggingface_policy_repairs.py  finalize_huggingface_policy_repair_audit.py  import_roms.py  migrate_huggingface_legacy_repos.py  play_wandb_artifact.py  prepare_huggingface_release.py  record_best_episode.py  repair_huggingface_legacy_cards.py  stage_huggingface_policy_repairs.py  upload_youtube_video.py
src/mario_ppo/: cli.py  env.py  env_config.py  eval_metrics.py  eval_runner.py  evaluate.py  modal_app.py  modal_benchmarks.py  modal_core.py  modal_train.py  play.py  train.py  wandb_artifacts.py  wandb_utils.py
src/rlab/: action_contract.py  artifact_durability.py  artifact_worker.py  artifacts.py  bandit_env.py  batch_runtime.py  benchmark.py  benchmark_profiles.py  callbacks.py  campaign.py  checkpoint_acceptance.py  checkpoint_coordinator.py  checkpoint_eval_config.py  checkpoint_eval_worker.py  cli.py  cli_args.py  cli_commands.py  compute_targets.py  config_loader.py  config_validation.py  contract_versions.py  database_tls.py  dataset_cli.py  dataset_contract.py  dataset_hub.py  dataset_media.py  dataset_minari.py  dataset_providers.py  dataset_record.py  dataset_store.py  distill.py  docker_host.py  dstack_backend.py  early_stop.py  env.py  env_cli.py  env_config.py  env_config_aliases.py  env_identity.py  env_metadata.py  (+118 more)
src/stable_retro_ppo/: callbacks.py  campaign.py  cli_args.py  env.py  eval_job_runner.py  eval_metrics.py  eval_profiles.py  eval_runner.py  evaluate.py  metric_names.py  modal_core.py  modal_eval.py  modal_train.py  play.py  skypilot_launch.py  train.py  train_runner.py  wandb_artifacts.py
tests/: db_fakes.py  fleet_fakes.py  test_action_contract.py  test_artifact_durability.py  test_artifact_playback_helpers.py  test_async_workers.py  test_audit_huggingface_release.py  test_autoresearch_study.py  test_bandit_env.py  test_batch_runtime.py  test_benchmark_profiles.py  test_breakout_dependency_data.py  test_callback_helpers.py  test_campaign_runner.py  test_checkpoint_acceptance.py  test_cli_surface.py  test_config_loader.py  test_config_validation.py  test_core_helpers.py  test_database_tls.py  test_dataset_contract.py  test_dataset_hub.py  test_dataset_media.py  test_dataset_minari.py  test_dataset_record.py  test_dataset_store.py  test_docker_host.py  test_dstack_backend.py  test_env_cli.py  test_env_helpers.py  test_env_provider_imports.py  test_env_registry.py  test_environment_task_config.py  test_eval.py  test_experiment_cli.py  test_fleet.py  test_fleet_service.py  test_fleet_service_entrypoint.py  test_fleet_watch.py  test_jerk.py  (+60 more)
todo/: 02-training-resume-trust-gate.md  06-run-name-path-traversal.md  07-monitor-api-auth-and-redaction.md  README.md
(+568 files in other folders)
