[project]
name = "rlab"
version = "0.1.0"
description = "Generic reinforcement-learning lab for training and evaluating game agents"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "stable-retro-turbo==1.0.1.post32; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "stable-retro-turbo==1.0.1.post32; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "supermariobrosnes-turbo>=0.3.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "supermariobrosnes-turbo>=0.3.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "breakout-turbo-env>=0.2.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "breakout-turbo-env>=0.2.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "stable-baselines3[extra]>=2.3,<3",
    "torch==2.11.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch==2.12.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorboard>=2.16,<3",
    "wandb>=0.18,<0.23",
    "wandb-workspaces>=0.4,<0.5",
    "boto3>=1.34,<2",
    "psycopg2-binary>=2.9,<3",
    "pyyaml>=6,<7",
    "hydra-core>=1.3,<2",
    "huggingface-hub>=1.0,<2",
    "jinja2>=3.1,<4",
    "captum>=0.9,<1",
    "numba>=0.65.1,<0.66",
    "modal>=1.3,<2",
    "rich>=15,<16",
    "textual>=8.2.8,<9",
]

[project.scripts]
rlab = "rlab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlab"]

[tool.uv]
exclude-newer = "7 days"
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
constraint-dependencies = [
    "mistralai!=2.4.6",
    "guardrails-ai!=0.10.1",
]

[tool.uv.exclude-newer-package]
breakout-turbo-env = "2026-07-15T10:58:00Z"
stable-retro-turbo = "2026-07-17T19:52:14Z"
supermariobrosnes-turbo = "2026-07-17T15:00:00Z"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.15,<0.16",
]
modal-deploy = [
    "hydra-core>=1.3,<2",
    "modal>=1.3,<2",
]
train-image-build = [
    "packaging>=25,<26",
]
train-runtime = [
    "stable-retro-turbo==1.0.1.post32; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "supermariobrosnes-turbo>=0.3.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "breakout-turbo-env>=0.2.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "stable-baselines3[extra]>=2.3,<3",
    "torch==2.12.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorboard>=2.16,<3",
    "wandb>=0.18,<0.23",
    "boto3>=1.34,<2",
    "psycopg2-binary>=2.9,<3",
    "pyyaml>=6,<7",
    "hydra-core>=1.3,<2",
    "huggingface-hub>=1.0,<2",
    "captum>=0.9,<1",
    "numba>=0.65.1,<0.66",
    "modal>=1.3,<2",
]
